# vagent

./: .env.example  .gitignore  pyproject.toml  requirements.txt
docs/: BENCHMARK_ANALYSIS.md  test.py
scripts/: bench.sh  run_agent.cmd  run_agent.sh  run_stt.sh
src/vagent/: __init__.py  agent.py  stt_server.py
src/vagent/plugins/: __init__.py  stt_cartesia.py  stt_whisper.py  stt_whisperlivekit.py  tts_cartesia.py  tts_kokoro.py  tts_vibevoice.py
src/vagent/utils/: __init__.py  latency.py  lk_latency_wrap.py
tools/: bench_services.py
